--- a/_config.yml
+++ b/_config.yml
@@ -18,24 +18,21 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Website Title
-name: Hoffer
-email: your-email@example.com
+title: Michael Hoffer
+name: Michael Hoffer
+email: email@michaelhoffer.net
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  A personal website for Michael Hoffer for professional and/or personal information.
 aboutme: >- 
-  A short description of yourself
+  Michael Hoffer is Brand Analyst at The J.M. Smucker Co.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+twitter_username: 
+github_username:  MichaelHoffer
 
 # Build settings
 #theme: minima
-plugins:
-  - jekyll-feed
+
 
 # Exclude from processing.
 # The following items will not be processed, by default.
