--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@
 
 title: Michael Hoffer
 name: Michael Hoffer
-email: email@michaelhoffer.net
+email: me@michaelhoffer.net
 description: >- # this means to ignore newlines until "baseurl:"
   A personal website for Michael Hoffer for professional and/or personal information.
 aboutme: >- 
